Fix arrows being visible on flip

--- a/popup/pomodoro_blacklist.css
+++ b/popup/pomodoro_blacklist.css
@@ -236,7 +236,7 @@ body {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 @keyframes screenOn {
